<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<com.facebook.login.widget.ProfilePictureView-->
        <!--android:id="@+id/iv_profilepic"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->
        <!--</com.facebook.login.widget.ProfilePictureView>-->
        <ImageView
            android:id="@+id/iv_profilepic"
            android:layout_width="150dp"
            android:layout_height="150dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="UserName"
            android:id="@+id/et_username"/>

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_gender"
            android:maxLength="6"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_phonenumber"
            android:maxLength="10"
            android:inputType="phone"/>

        <TextView
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_address"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_locality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_locality"
            android:maxLength="25"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_city"
            android:maxLength="12"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_state"
            android:maxLength="12"
            android:inputType="text"/>

        <EditText
            android:id="@+id/et_pincode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/hint_pincode"
            android:maxLength="6"
            android:inputType="number"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Logout"
            android:text="LOG OUT"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:id="@+id/Submit"/>

    </LinearLayout>
</ScrollView>